--- a/Mod.CookieConsent.csproj
+++ b/Mod.CookieConsent.csproj
@@ -77,7 +77,9 @@
       <Name>Orchard.Framework</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="README.md" />
+  </ItemGroup>
   <ItemGroup>
     <Compile Include="AdminMenu.cs" />
     <Compile Include="Constants.cs" />
